crates/cyrs-sema/src/snapshots/cyrs_sema__infer__tests__infer_bool_sub_int_error.snap
---
source: crates/cyrs-sema/src/infer.rs
expression: run(&stmt)
---
diagnostics: 1
  E2009: arithmetic operand must be numeric (`Int`, `Float`, or `Num`) but found `Bool`
