crates/cyrs-sema/src/snapshots/cyrs_sema__infer__tests__infer_contains_int_error.snap
---
source: crates/cyrs-sema/src/infer.rs
expression: run(&stmt)
---
diagnostics: 1
  E2010: string operator requires `String` operands but found `Int`
