crates/cyrs-sema/src/snapshots/cyrs_sema__infer__tests__infer_id_of_string_literal_errors_e5012.snap
---
source: crates/cyrs-sema/src/infer.rs
expression: run(&stmt)
---
diagnostics: 1
  E5012: builtin `id` argument has type `String` but expected `Node | Relationship | Path`
