crates/cyrs-sema/src/snapshots/cyrs_sema__infer__tests__infer_in_not_a_list_error.snap
---
source: crates/cyrs-sema/src/infer.rs
expression: run(&stmt)
---
diagnostics: 1
  E2013: `IN` right-hand side must be a list but found `Int`
