crates/cyrs-sema/src/snapshots/cyrs_sema__infer__tests__infer_keys_of_path_errors_e5012.snap
---
source: crates/cyrs-sema/src/infer.rs
expression: run(&stmt)
---
diagnostics: 1
  E5012: builtin `keys` argument has type `Path` but expected `Node | Relationship | Map`
